examples/kubernetes/network-policy/guestbook-policy-web.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: guestbook-web
  annotations:
   cilium-policy: |
    {
      "ingress": [
        {
          "from": [
            {
              "ciliumSelector": {
                "matchLabels": {
                  "io.cilium.reserved": "world"
                }
              }
            }
          ],
          "matchApplications": [
            {
              "Kind": "http",
              "APIVersion": "alphav1",
              "rules": [
                {
                  "method": "GET",
                  "path": "/"
                }
              ]
            }
          ]
        }
      ]
    }
spec:
  podSelector:
    matchLabels:
      k8s-app.guestbook: web
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 3000
